Cell scaling, rotation and translation implemented; Cube cell implemented; Minor changes to Triangle vertex data struct.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,6 +31,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="pushButton_test">
+        <property name="text">
+         <string>Load a test cube</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLabel" name="label">
