CustomCell class implemented; getBoundaries() and intersectRayPlane() implemented; Process button now iterates through each layer using its boundaries.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -86,7 +86,7 @@
       <item>
        <widget class="QGroupBox" name="groupBox_infillDensity">
         <property name="enabled">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="title">
          <string>Infill density</string>
