Base part rotation implemented.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>837</width>
-    <height>595</height>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,6 +38,9 @@
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
           <widget class="QPushButton" name="pushButton_rotate">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>Rotate</string>
            </property>
