--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>837</width>
-    <height>664</height>
+    <height>720</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -106,6 +106,9 @@
           <widget class="QCheckBox" name="checkBox_skipHollowing">
            <property name="text">
             <string>Skip hollowing</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -260,6 +263,39 @@
                </widget>
               </item>
              </layout>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="groupBox_infillCoordinateSystem">
+           <property name="title">
+            <string>Coordinate system</string>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_8">
+            <item>
+             <widget class="QRadioButton" name="radioButton_infillCoordinateSystem_cartesian">
+              <property name="text">
+               <string>Cartesian</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="radioButton_infillCoordinateSystem_cylindrical">
+              <property name="text">
+               <string>Cylindrical</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="radioButton_infillCoordinateSystem_spherical">
+              <property name="text">
+               <string>Spherical</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
