--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -395,7 +395,7 @@
       <item>
        <widget class="QPushButton" name="pushButton_save">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>Save</string>
