--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -3,7 +3,7 @@
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
   <property name="windowModality">
-   <enum>Qt::ApplicationModal</enum>
+   <enum>Qt::WindowModal</enum>
   </property>
   <property name="geometry">
    <rect>
@@ -37,7 +37,7 @@
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
-          <widget class="QPushButton" name="pushButton_rotate">
+          <widget class="QPushButton" name="pushButton_rotateBase">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -87,7 +87,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_3">
+            <widget class="QLabel" name="label_offsetUnit">
              <property name="text">
               <string>mm</string>
              </property>
@@ -256,7 +256,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QLabel" name="label_2">
+               <widget class="QLabel" name="label_cellUnit">
                 <property name="text">
                  <string>mm</string>
                 </property>
@@ -313,7 +313,7 @@
       <item>
        <widget class="QPushButton" name="pushButton_process">
         <property name="enabled">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="text">
          <string>Process</string>
@@ -327,7 +327,7 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_6">
          <item>
-          <widget class="QLabel" name="labelNTriangles">
+          <widget class="QLabel" name="label_nTriangles">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -360,13 +360,57 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QLabel" name="label_baseOrigin">
+           <property name="text">
+            <string>Origin: -</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_baseCentroid">
+           <property name="text">
+            <string>Centroid: -</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_baseVolume">
+           <property name="text">
+            <string>Volume: -</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
       <item>
-       <widget class="QGroupBox" name="groupBox_options">
+       <widget class="QPushButton" name="pushButton_save">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Save</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_viewer">
+      <item>
+       <widget class="STLPreview" name="openGLWidget"/>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_viewerOptions">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="title">
-         <string>Options</string>
+         <string>Viewer options</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_5">
          <item>
@@ -392,20 +436,7 @@
         </layout>
        </widget>
       </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_save">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>Save</string>
-        </property>
-       </widget>
-      </item>
      </layout>
-    </item>
-    <item>
-     <widget class="STLPreview" name="openGLWidget"/>
     </item>
    </layout>
   </widget>
