--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -108,7 +108,7 @@
             <string>Skip hollowing</string>
            </property>
            <property name="checked">
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -375,6 +375,9 @@
           <widget class="QCheckBox" name="checkBox_skipInfilling">
            <property name="text">
             <string>Skip infilling</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
