--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -120,7 +120,7 @@
             <string>Skip hollowing</string>
            </property>
            <property name="checked">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -304,7 +304,7 @@
                <string>Cartesian</string>
               </property>
               <property name="checked">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -312,6 +312,9 @@
              <widget class="QRadioButton" name="radioButton_infillCoordinateSystem_cylindrical">
               <property name="text">
                <string>Cylindrical</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -395,7 +398,7 @@
             <string>Skip infilling</string>
            </property>
            <property name="checked">
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
           </widget>
          </item>
