Improved cube initialization (vertices float precision); Implemented region infill; Fixed a bug on insertCell(); WARNING: the rotation functions are very imprecise...

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -476,7 +476,7 @@
              </layout>
             </item>
             <item>
-             <widget class="QCheckBox" name="checkBox">
+             <widget class="QCheckBox" name="checkBox_infill_relativeToRegion">
               <property name="text">
                <string>Relative to selected region</string>
               </property>
