--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>837</width>
-    <height>865</height>
+    <height>890</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -318,6 +318,9 @@
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
+                <property name="minimum">
+                 <double>-100.000000000000000</double>
+                </property>
                </widget>
               </item>
               <item>
@@ -335,6 +338,9 @@
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
+                <property name="minimum">
+                 <double>-100.000000000000000</double>
+                </property>
                </widget>
               </item>
               <item>
@@ -351,6 +357,9 @@
                <widget class="QDoubleSpinBox" name="doubleSpinBox_region_fromZ">
                 <property name="enabled">
                  <bool>true</bool>
+                </property>
+                <property name="minimum">
+                 <double>-100.000000000000000</double>
                 </property>
                </widget>
               </item>
@@ -373,6 +382,9 @@
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
+                <property name="minimum">
+                 <double>-100.000000000000000</double>
+                </property>
                </widget>
               </item>
               <item>
@@ -390,6 +402,9 @@
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
+                <property name="minimum">
+                 <double>-100.000000000000000</double>
+                </property>
                </widget>
               </item>
               <item>
@@ -406,6 +421,27 @@
                <widget class="QDoubleSpinBox" name="doubleSpinBox_region_toZ">
                 <property name="enabled">
                  <bool>true</bool>
+                </property>
+                <property name="minimum">
+                 <double>-100.000000000000000</double>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout">
+              <item>
+               <widget class="QRadioButton" name="radioButton_2">
+                <property name="text">
+                 <string>Trimm cells on region boundaries</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="radioButton">
+                <property name="text">
+                 <string>Trimm cells on base boundaries</string>
                 </property>
                </widget>
               </item>
