--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -458,14 +458,17 @@
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout">
               <item>
-               <widget class="QRadioButton" name="radioButton_2">
+               <widget class="QRadioButton" name="radioButton_infill_region_trimmRegion">
                 <property name="text">
                  <string>Trimm cells on region boundaries</string>
+                </property>
+                <property name="checked">
+                 <bool>true</bool>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QRadioButton" name="radioButton">
+               <widget class="QRadioButton" name="radioButton_infill_region_trimmBase">
                 <property name="text">
                  <string>Trimm cells on base boundaries</string>
                 </property>
